#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

TB-2009-10-23-0: Enhancem.:  o added SDM test for RFE issue 687:
                               resources/purge/check.62.exp
                             o added SDM test for move resource from serviceA
                               to serviceA:
                               resources/move/same_service/check.62.exp
                             o new SDM cloud helper function
                               hedeby_change_gef_action
                 Bugfix:     Fixed changed bundle strings
                 Review:     RH

RH-2009-10-22-0: Bugfix:     Hedeby
                             o Issue 551 test improved
                             o tcl error in permanentRequestSLO test fixed
                 Review:     TB

LP-2009-10-22-0: Bugfix:     Made host_aliases test unsupported for loghost
                             alias, cannot shutdown scheduler otherwise
                 Review:     JO

RH-2009-10-22-0: Bugfix:     Hedeby:
                             o file_permission test ignores files in log directory
                             o issue_684 test checks that tmp dir of removed service
                               disappears
                 Review:     TB

CR-2009-10-21-1: Enhancem.:  o modified drmaaj test to run all checklevels even
                               when one check level reports an error
                 Review:     JG

CR-2009-10-21-0: Bugfix:     o updated adoc header for set_config()
                             o fixed auto_reschedule test for GE 61 version
                 Belongs to: CR-2009-08-10-0
                 Review:     SH
