@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
+CR-2009-10-26-0: Bugfix:     o fixed host aliases test
+                 Review:     LP
 
 TB-2009-10-23-0: Enhancem.:  o added SDM test for RFE issue 687:
                                resources/purge/check.62.exp
